--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="/src/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div>
-      <nav class="navbar navbar-expand sticky-top-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">🥐Croissant</a>
           <button
@@ -45,13 +45,13 @@
                 <a class="nav-link" href="photo.html">Photos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <h1>Croissant</h1>
+      <h1 class="text-center fw-bold text p-5 mt-5">Contact Us</h1>
     </div>
   </body>
 </html>
