--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="/src/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -20,7 +21,7 @@
   </head>
   <body>
     <div>
-      <nav class="navbar navbar-expand sticky-top-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">🥐Croissant</a>
           <button
@@ -45,13 +46,42 @@
                 <a class="nav-link" href="photo.html">Photos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <h1>Croissant</h1>
+      <h1 class="text-center fw-bold text p-5 mt-5">🥐Croissant🥐</h1>
+      <div class="main-container"></div>
+      <p class="main-paragraph text-center fs-5">
+        A croissant is a French pastry made from puff pastry in a crescent
+        shape. It is a buttery, flaky, viennoiserie pastry inspired by the shape
+        of the Austrian kipferl, but using the French yeast-leavened laminated
+        dough. Croissants are named for their historical crescent shape. The
+        dough is layered with butter, rolled and folded several times in
+        succession, then rolled into a thin sheet, in a technique called
+        laminating. The process results in a layered, flaky texture, similar to
+        a puff pastry.
+        <br />
+        <br />
+        Crescent-shaped breads have been made since the Renaissance, and
+        crescent-shaped cakes possibly since antiquity. The modern croissant was
+        developed in the early 20th century, when French bakers replaced the
+        brioche dough of the kipferl with a yeast-leavened laminated dough.
+        <br />
+        <br />
+        In the late 1970s, the development of factory-made, frozen, preformed
+        but unbaked dough made them into a fast food that could be freshly baked
+        by unskilled labor. The croissant bakery, notably the La Croissanterie
+        chain, was a French response to American-style fast food,and as of 2008,
+        30–40% of the croissants sold in French bakeries and patisseries were
+        baked from frozen dough.
+        <br />
+        <br />
+        Croissants are a common part of a continental breakfast in many European
+        countries.
+      </p>
     </div>
   </body>
 </html>
