--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="/src/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -20,9 +20,9 @@
   </head>
   <body>
     <div>
-      <nav class="navbar navbar-expand sticky-top-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">🥐Croissant</a>
+          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -45,13 +45,61 @@
                 <a class="nav-link" href="photo.html">Photos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <h1>Croissant</h1>
+      <h1 class="text-center fw-bold text p-5 mt-5">Croissant Photos</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="/images/croissant photo.jpg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+          <div class="col-6">
+            <img
+              src="/images/Croissants 2.jpg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="/images/Pain-au-Chocolat-3.jpg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+          <div class="col-6">
+            <img
+              src="/images/croissant 4.jpg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="/images/croissant 7.jpg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+          <div class="col-6">
+            <img
+              src="/images/croissant 5.jpeg"
+              class="img-fluid rounded border p-2"
+            />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
