added css to photos

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div>
       <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">🥐Croissant</a>
+          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant🥐</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -51,7 +51,13 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center fw-bold text p-5 mt-5">Contact Us</h1>
+      <h1 class="text-center fw-bold text p-5 mt-5">🥐Contact Us🥐</h1>
+      <div class="main-container"></div>
+      <p class="main-paragraph fw-medium fs-5">
+        To contact croissant.com, please email us at
+        <a href="hello@croissant.com">hello@croissant.com</a>
+        for more info
+      </p>
     </div>
   </body>
 </html>
