--- a/photo.html
+++ b/photo.html
@@ -22,7 +22,7 @@
     <div>
       <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant</a>
+          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant🥐</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -51,51 +51,54 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center fw-bold text p-5 mt-5">Croissant Photos</h1>
+      <h1 class="text-center fw-bold text p-5 mt-5">🥐Croissant Photos🥐</h1>
+      <div class="main-container"></div>
       <div class="container">
         <div class="row">
           <div class="col-6">
             <img
               src="/images/croissant photo.jpg"
-              class="img-fluid rounded border p-2"
+              class="img-fluid rounded-4 border p-3"
             />
           </div>
           <div class="col-6">
             <img
               src="/images/Croissants 2.jpg"
-              class="img-fluid rounded border p-2"
+              class="img-fluid rounded-4 border p-3"
             />
           </div>
         </div>
       </div>
+      <div class="main-container"></div>
       <div class="container">
         <div class="row">
           <div class="col-6">
             <img
               src="/images/Pain-au-Chocolat-3.jpg"
-              class="img-fluid rounded border p-2"
-            />
-          </div>
-          <div class="col-6">
-            <img
-              src="/images/croissant 4.jpg"
-              class="img-fluid rounded border p-2"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="/images/croissant 7.jpg"
-              class="img-fluid rounded border p-2"
+              class="img-fluid rounded-4 border p-3"
             />
           </div>
           <div class="col-6">
             <img
               src="/images/croissant 5.jpeg"
-              class="img-fluid rounded border p-2"
+              class="img-fluid rounded-4 border p-3"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="main-container"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="/images/croissant 7.jpg"
+              class="img-fluid rounded-4 border p-3"
+            />
+          </div>
+          <div class="col-6">
+            <img
+              src="/images/croissant 4.jpg"
+              class="img-fluid rounded-4 border p-3"
             />
           </div>
         </div>
