--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
       <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">🥐Croissant</a>
+          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant🥐</a>
           <button
             class="navbar-toggler"
             type="button"
