added alt to to first photo

--- a/photo.html
+++ b/photo.html
@@ -54,10 +54,11 @@
       <h1 class="text-center fw-bold text p-5 mt-5">🥐Croissant Photos🥐</h1>
       <div class="main-container"></div>
       <div class="container">
+        
         <div class="row">
           <div class="col-6">
             <img
-              src="/images/croissant photo.jpg"
+              src="/images/croissant photo.jpg"  alt="shiny croissant on white plate"
               class="img-fluid rounded-4 border p-3"
             />
           </div>
