--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div>
       <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="index.html">🥐Croissant🥐</a>
+          <a class="navbar-brand fw-bold" href="index.html"
+            >🥐Croissant R Us🥐</a
+          >
           <button
             class="navbar-toggler"
             type="button"
